# wasm-dom

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.md  README.md
.github/workflows/: emscripten.yml  linux.yml  macos.yml  native.yml  pr.yml  windows.yml
cmake/: address_sanitizer.cmake  compile_flags.cmake  disable_exceptions.cmake  optimization_flags.cmake
coverage/: CMakeLists.txt  InstrProfiling.h  Readme.md  llvm-gcov  platform.h.in  run.sh  simplegcov.cpp  simplegcov.h
docs/: cpp.md  examples.md  installation.md  motivation.md  patch.md
examples/: CMakeLists.txt  configure_html_file.cmake  example_index.html.in  index.html.in  styles.css
examples/0-console/: CMakeLists.txt  main.cpp
examples/1-counter/: CMakeLists.txt  main.cpp
examples/2-routing/: CMakeLists.txt  main.cpp
examples/3-webcomponent/: CMakeLists.txt  main.cpp
examples/4-webbenchmarks/: CMakeLists.txt  main.cpp
examples/5-events/: CMakeLists.txt  main.cpp
examples/console/: main.cpp
extra/: CMakeLists.txt  single_header.cmake  wasm-dom.hpp
include/: wasm-dom.hpp
include/wasm-dom/: attribute.hpp  attribute.inl.hpp  h.hpp  vdom.hpp  vnode.hpp  vnode.inl.hpp
src/: CMakeLists.txt  attribute.cpp  vdom.cpp  vnode.cpp  wasm-dom.hpp
src/internals/: bind.h  diff.hpp  domapi.cpp  domapi.hpp  domfactory.hpp  domrecycler.cpp  domrecycler.hpp  domrecyclerfactory.hpp  jsapi.c  jsapi.hpp  patch.hpp  tohtml.hpp  tovnode.hpp  utils.hpp  wire.cpp  wire.hpp
src/wasm-dom/: attribute.cpp  attribute.hpp  attribute.inl.cpp  config.cpp  config.hpp  configprivate.hpp  diff.cpp  diff.hpp  domapi.cpp  domapi.hpp  domkeys.hpp  domrecycler.cpp  domrecycler.hpp  h.cpp  h.hpp  init.cpp  init.hpp  patch.cpp  patch.hpp  tohtml.cpp  tohtml.hpp  tovnode.cpp  tovnode.hpp  vdom.cpp  vdom.hpp  vnode.cpp  vnode.hpp  vnode.inl.cpp  vnodeforward.hpp
src/wasm-dom/internals/: conf.h  diff.hpp  domapi.cpp  domfactory.hpp  domkeys.hpp  domrecycler.cpp  domrecyclerfactory.hpp  jsapi.c  patch.hpp  tohtml.hpp  utils.hpp  wire.cpp  wire.hpp
test/: CMakeLists.txt  benchmarks.cpp  jsdom.cpp  main.cpp  package-lock.json  package.json  runner.js  tohtml.cpp  utils.cpp  utils.hpp
test/benchmark/: CMakeLists.txt
test/common/: CMakeLists.txt  catch_emscripten.cpp  catch_emscripten.hpp  jsdom.cpp  jsdom.hpp
test/single_header/: CMakeLists.txt  test1.cpp  test2.cpp  tohtml.cpp
test/src/: CMakeLists.txt  attributes.cpp  dataset.cpp  domapi.cpp  domrecycler.cpp  eventlisteners.cpp  h.cpp  index.cpp  patch.cpp  patchevent.cpp  patchfragment.cpp  props.cpp  tohtml.cpp  tovnode.cpp
